Add ZMUTATE_ADD_INTEGER test and update key selector defaults
Introduce a comprehensive test for the ZMUTATE_ADD_INTEGER functionality, verifying proper addition with little-endian integers. Adjust key selector defaults for ZGETRANGE and ZGETKEY commands to ensure accurate behavior. Update README with detailed examples for ZGETKEY, ZGETRANGE, and ZMUTATE, enriching documentation clarity and usability.